# universal-explorer

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: app.rs  assets.rs  lib.rs  loader.rs
app/src/app_util/: image_utils.rs  mod.rs  splitter.rs  virtual_fs.rs
app/src/explorers/: image.rs  mod.rs  text.rs  virtual_fs.rs
app/src/explorers/godot/: mod.rs  pck.rs  tex.rs
app/src/explorers/renpy/: mod.rs  rpa.rs  rpyc.rs
app/src/explorers/source_engine/: mod.rs  vpk.rs  vtf.rs
assets/lucide/: LICENSE
crates/godot/: Cargo.toml
crates/godot/src/: lib.rs  pck.rs  tex.rs
crates/renpy/: Cargo.toml
crates/renpy/src/: lib.rs  rpa.rs  rpyc.rs
crates/source_engine/: Cargo.toml
crates/source_engine/src/: lib.rs  vpk.rs  vtf.rs
crates/util/: Cargo.toml
crates/util/src/: file_utils.rs  image_utils.rs  lib.rs  reader.rs  tree_fs.rs  virtual_fs.rs
crates/util/src/pickle/: mod.rs  parser.rs  pickle.rs
crates/util/src/texture/: bc.rs  mod.rs
src/: main.rs
src/app/: app.rs  assets.rs  loader.rs  mod.rs
src/app/explorers/: image.rs  mod.rs  text.rs  virtual_fs.rs
src/app/explorers/godot/: pck.rs  tex.rs
src/app/explorers/renpy/: mod.rs  rpa.rs
src/app/explorers/source_engine/: vpk.rs  vtf.rs
src/explorers/: mod.rs
src/explorers/godot/: mod.rs  pck.rs  tex.rs
src/explorers/renpy/: rpa.rs
src/explorers/source_engine/: vpk.rs  vtf.rs
src/util/: file.rs  image.rs  mod.rs  reader.rs  tree_fs.rs  virtual_fs.rs
src/util/egui/: mod.rs  splitter.rs  virtual_fs.rs
src/util/pickle/: mod.rs  parser.rs  pickle.rs
src/util/source_engine/: mod.rs  vpk.rs  vtf.rs
src/util/texture/: bc.rs  mod.rs
