[package]
name = "universal-explorer"
description = "View & extract files from game archives"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
catppuccin-egui = { version = "5.2.0", default-features = false, features = ["egui28"] }
clap = { version = "4.5.16", features = ["derive"] }
dark-light = "1.1.1"
eframe = "0.28.1"
egui = "0.28.1"
egui_dock = "0.13.0"
egui_extras = { version = "0.28.1", features = ["svg", "image"] }
env_logger = { version = "0.11.5", features = ["auto-color", "humantime"] }
flate2 = "1.0.33"
glob-match = "0.2.1"
image = "0.25.2"
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.10.6"
rfd = "0.14.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v7"] }

[build-dependencies]
winresource = "0.1.17"
