[package]
name = "universal-explorer"
description = "View & extract files from game archives"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
    "app",
    "crates/*",
]
package.edition = "2021"

[dependencies]
# While developing disable some features to get faster build times.
app = { path = "./app", features = [ "source_engine", "godot", "renpy" ] }
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }

[build-dependencies]
winresource = "0.1.17"
